--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>High School from <a href="http://rayatshikshan.edu/">Rayat Shikshan Sanstha Satara</a></li>
     </ul>
     <h3>Work Experience</h3>
-    <table>
+    <table cellspacing = "20">
         <thead>
             <tr>
                 <th>Year</th>
