--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oulkar Websitse</title>
+    <style>
+        body{
+            background-color: rgb(204, 226, 228);
+        }
+        hr{
+            background-color: rgb(208, 127, 42);
+            border-style: none;
+            height: 2px;
+        }
+        table{
+            height: 20%;
+            width: 60%;
+        }
+    </style>
 </head>
 <body>
     <table cellpadding = "20">
@@ -15,7 +29,7 @@
                 <p>I completed bachlors degree in <strong>Electronics and Telecommunication</strong> and I am profetional engineer.
                  I had 1 year experiance in <strong>ML and AI</strong>. My past working experiance was in IOT systems designing. 
                  My 1st love was <strong>Assembly c and varilog</strong> designing but later I fall in love with <strong>Python</strong>.
-                 Then later <i>I just realised that falling in love with coding languages is easy for me. And this my strength.</i></p>
+                 Then later <i>I just realised that falling in 💖love with coding languages is easy for me. And this my 💪strength.</i></p>
             </td>
         </tr>
     </table>
