--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <li>High School from <a href="http://rayatshikshan.edu/">Rayat Shikshan Sanstha Satara</a></li>
     </ul>
     <h3>Work Experience</h3>
-    <table cellspacing = "20">
+    <table cellspacing = "20" height = 20% width=30%>
         <thead>
             <tr>
                 <th>Year</th>
