--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <table cellpadding = "20">
+    <table cellpadding = "20" weight="60% height=20%">
         <tr>
             <td><img src="image.png" alt="shubham profile picture"></td>
             <td><h1>Shubham Oulkar</h1> 
