--- a/index.html
+++ b/index.html
@@ -4,24 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oulkar Websitse</title>
-    <style>
-        body{
-            background-color: rgb(204, 226, 228);
-        }
-        hr{
-            background-color: rgb(208, 127, 42);
-            border-style: none;
-            height: 2px;
-        }
-    </style>
+    <title>Shubham Oulkar - an data engineer</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <table cellpadding = "20"  height=20% weight=60%>
+    <table class="intro" cellpadding = "20">
         <tr>
             <td><img src="image.png" alt="shubham profile picture"></td>
             <td><h1>Shubham Oulkar</h1> 
-                <p><i><b>ML, AI and DATA Engineer</b></i></p>
+                <p id="work"><i><b>ML, AI and DATA Engineer</b></i></p>
                 <p>I completed bachlors degree in <strong>Electronics and Telecommunication</strong> and I am profetional engineer.
                  I had 1 year experiance in <strong>ML and AI</strong>. My past working experiance was in IOT systems designing. 
                  My 1st love was <strong>Assembly c and varilog</strong> designing but later I fall in love with <strong>Python</strong>.
@@ -52,13 +44,15 @@
         </tr>
     </table>
     <h3><a href="contactdetails.html">Contact me here</a></h3>
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>BE from <a href="http://www.unishivaji.ac.in/">Shivaji University Kolhapur</a></li>
         <li>High School from <a href="http://rayatshikshan.edu/">Rayat Shikshan Sanstha Satara</a></li>
     </ul>
+    <hr>
     <h3>Work Experience</h3>
-    <table cellspacing = "20" height = 20% width=25%>
+    <table class="experiance" cellspacing = "20">
         <thead>
             <tr>
                 <th>Year</th>
@@ -82,5 +76,6 @@
         <li>Gaming</li>
         <li>Driving for long trips</li>
     </ol>
+    <hr>
 </body>
 </html>
