--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham Oulkar - an data engineer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <table class="intro" cellpadding = "20">
         <tr>
             <td><img src="image.png" alt="shubham profile picture"></td>
-            <td><h1>Shubham Oulkar</h1> 
+            <td><h1 id="myname" >Shubham Oulkar</h1> 
                 <p id="work"><i><b>ML, AI and DATA Engineer</b></i></p>
                 <p>I completed bachlors degree in <strong>Electronics and Telecommunication</strong> and I am profetional engineer.
                  I had 1 year experiance in <strong>ML and AI</strong>. My past working experiance was in IOT systems designing. 
