--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Shubham Oulkar - an data engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400&family=Cinzel&family=Kalam&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
 </head>
 <body>
     <table class="intro" cellpadding = "20">
         <tr>
             <td><img src="image.png" alt="shubham profile picture"></td>
             <td><h1 id="myname" >Shubham Oulkar</h1> 
-                <p id="work"><i><b>ML, AI and DATA Engineer</b></i></p>
+                <p><i><strong>ML, AI and DATA Engineer</strong></i></p>
                 <p>I completed bachlors degree in <strong>Electronics and Telecommunication</strong> and I am profetional engineer.
                  I had 1 year experiance in <strong>ML and AI</strong>. My past working experiance was in IOT systems designing. 
                  My 1st love was <strong>Assembly c and varilog</strong> designing but later I fall in love with <strong>Python</strong>.
@@ -43,7 +50,6 @@
             <td>⭐⭐⭐⭐</td>
         </tr>
     </table>
-    <h3><a href="contactdetails.html">Contact me here</a></h3>
     <hr>
     <h3>Education</h3>
     <ul>
@@ -77,5 +83,20 @@
         <li>Driving for long trips</li>
     </ol>
     <hr>
+    <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="contactdetails.html">CONTACT ME</a>
+      </div>
+    </div>
+    
+    
+    <div class="bottom-container">
+      <a class="footer-link" href="https://linkedin.com/in/shubham-oulkar-372797217/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/shubhuoulkar">Twitter</a>
+      <a class="footer-link" href="https://shubhamoulkar.github.io/cv/">Website</a>
+      <p>© 2023 Shubham Oulkar.</p>
+    </div>
 </body>
 </html>
