--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400&family=Cinzel&family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Cinzel&family=Kalam&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
@@ -85,18 +85,15 @@
     <hr>
     <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="contactdetails.html">CONTACT ME</a>
-      </div>
+        <a class="btn" href="contactdetails.html">CONTACT ME</a><br>
     </div>
     
     
     <div class="bottom-container">
-      <a class="footer-link" href="https://linkedin.com/in/shubham-oulkar-372797217/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/shubhuoulkar">Twitter</a>
-      <a class="footer-link" href="https://shubhamoulkar.github.io/cv/">Website</a>
-      <p>© 2023 Shubham Oulkar.</p>
+        <a class="footer-link" href="https://linkedin.com/in/shubham-oulkar-372797217/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/shubhuoulkar">Twitter</a>
+        <a class="footer-link" href="https://shubhamoulkar.github.io/cv/">Website</a>
+      <p class="copyright">© 2023 Shubham Oulkar</p>
     </div>
 </body>
 </html>
