--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <td><img src="image.png" alt="shubham profile picture"></td>
             <td><h1 id="myname" >Shubham Oulkar</h1> 
                 <p><i><strong>ML, AI and DATA Engineer</strong></i></p>
-                <p>I completed bachlors degree in <strong>Electronics and Telecommunication</strong> and I am profetional engineer.
-                 I had 1 year experiance in <strong>ML and AI</strong>. My past working experiance was in IOT systems designing. 
-                 My 1st love was <strong>Assembly c and varilog</strong> designing but later I fall in love with <strong>Python</strong>.
-                 Then later <i>I just realised that falling in 💖love with coding languages is easy for me. And this my 💪strength.</i></p>
+                <p>I completed bachelors degree in <strong>Electronics and Telecommunication</strong> and I am professional engineer.
+                 I had 1 year experience in <strong>ML and AI</strong>. My 1st love was <strong>Assembly c and Verilog</strong> designing but later I fall in love with <strong>Python</strong>.
+                 Then <i>I just realized that falling in 💖love with coding languages is easy for me. And this is my 💪strength.</i></p>
             </td>
         </tr>
     </table>
