--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://linkedin.com/in/shubham-oulkar-372797217/" target="_blank">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/shubhuoulkar" target="_blank">Twitter</a>
-        <a class="footer-link" href="https://shubhamoulkar.github.io/cv/" target="_blank">Website</a>
+        <a class="footer-link" href="https://shubhamoulkar.github.io/visit-me-here/" target="_blank">Visit here</a>
       <p class="copyright">© 2023 Shubham Oulkar</p>
     </div>
 </body>
